--- a/source/sass/blocks/catalog.scss
+++ b/source/sass/blocks/catalog.scss
@@ -1,9 +1,13 @@
-// .catalog {
-//   padding: 0 20px;
-// }
+.catalog {
+  margin: 0 auto;
+}
 
 .catalog__list {
   @include reset-list ();
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
 
   @media (min-width:$tablet-width) {
     width: 708px;
