--- a/source/sass/blocks/social.scss
+++ b/source/sass/blocks/social.scss
@@ -1,6 +1,6 @@
 .social {
-  border-top: 1px solid $light-grey;
-  border-bottom: 1px solid $light-grey;
+  border-top: 1px solid $border-grey;
+  border-bottom: 1px solid $border-grey;
 
   @media (min-width:$tablet-width) {
     border: none;
