--- a/source/sass/blocks/button.scss
+++ b/source/sass/blocks/button.scss
@@ -6,7 +6,7 @@
   color: $white;
   line-height: 20px;
   background-color: $green;
-  width: 100%;
+  max-width: 280px;
   box-sizing: border-box;
   font-weight: 400;
   font-size: 16px;
