--- a/source/sass/blocks/programs.scss
+++ b/source/sass/blocks/programs.scss
@@ -42,7 +42,7 @@
   padding: 0;
   font-size: 24px;
   line-height: 37px;
-  font-weight: normal;
+  font-weight: 400;
   text-transform: uppercase;
 
   @media (min-width: $tablet-width) {
