--- a/source/sass/blocks/progress.scss
+++ b/source/sass/blocks/progress.scss
@@ -20,7 +20,7 @@
   bottom: 9px;
   font-family: $arial;
   font-size: 12px;
-  line-height: 1;
+  line-height: 26px;
   text-align: center;
   text-transform: lowercase;
   color: $special-dark-grey;
