--- a/source/sass/global/global.scss
+++ b/source/sass/global/global.scss
@@ -4,7 +4,7 @@ body {
   font-weight: 400;
   font-size: 16px;
   font-style: normal;
-  line-height: 1;
+  line-height: 26px;
   box-sizing: border-box;
   min-width: 320px;
   margin: 0;
