--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -5,6 +5,7 @@
 
   @media (min-width: $tablet-width) {
     border-top: none;
+    margin: 0 -18px;
 }
 
 .main-nav__list {
@@ -35,7 +36,7 @@
   text-align: center;
   padding: 20px;
   font-family: $oswald;
-  font-weight: 500;
+  font-weight: 400;
   font-size: 20px;
   line-height: 25px;
 
