--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -3,16 +3,16 @@
     position: relative;
     display: flex;
     align-items: center;
+    height: 500px;
   }
 }
 
 .contacts__text {
-
   @media (min-width: $desktop-width) {
     position: absolute;
     top: 0;
     bottom: 0;
-    padding-left: calc((100vw - 1300px) / 2 + 40px);
+    padding-left: calc((100vw - 1360px) / 2 + 40px);
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -39,12 +39,30 @@
       background-color: $white;
     }
   }
+
+  @media (min-width:$desktop-width) {
+    margin-bottom: 10px;
+    padding-left: 75px;
+    padding-right: 85px;
+    z-index: 1;
+    background-color: $white;
+    max-width: 570px;
+  }
+}
+
+.contacts__part {
+  margin: 0;
+  flex-basis: 50%;
+
+  @media (min-width:$tablet-width) {
+    flex-basis: 160px;
+  }
 }
 
 .contacts__greeting {
   font-size: 16px;
   line-height: 20px;
-  font-weight: 300;
+  font-weight: 400;
   text-transform: uppercase;
   color: $black;
   margin: 0;
@@ -53,7 +71,10 @@
   @media (min-width:$tablet-width) {
     line-height: 21px;
     font-size: 20px;
-    width: 171px;
+  }
+
+  @media (min-width:$desktop-width) {
+    margin-right: 90px;
   }
 }
 
@@ -65,11 +86,11 @@
   @media (min-width: $tablet-width) {
     text-align: right;
     font-size: 16px;
-    width: 159px;
   }
 
   @media (min-width: $desktop-width) {
     text-align: left;
+    margin-bottom: 5px;
   }
 }
 
@@ -84,6 +105,7 @@
 
 .contacts__map {
   width: 100%;
+  height: 362px;
   background-color: $light-grey;
   background-image: url("../img/map-mobile.png");
   background-repeat: no-repeat, no-repeat;
@@ -92,13 +114,13 @@
 
   @media (min-width:$tablet-width) {
     background-image: url("../img/map-tablet.png");
-    width: 768px;
     height: 400px;
+    background-size: cover;
   }
 
   @media (min-width:$desktop-width) {
-    width: 1440px;
-    height: 400px;
+    height: 500px;
     background-image: url("../img/map-desktop.png");
+    background-position: center;
   }
 }
