--- a/source/sass/blocks/example.scss
+++ b/source/sass/blocks/example.scss
@@ -1,5 +1,5 @@
 .example {
-  margin: 0 auto;
+  padding-top: 10px;
   background-color: $grey;
 
   @media (min-width: $tablet-width) {
@@ -12,6 +12,7 @@
     padding-bottom: 0;
     background-color: $basic-grey;
     border-top: none;
+    overflow: hidden;
   }
 }
 
@@ -48,6 +49,7 @@
 }
 
 .example__text {
+  padding-right: 5px;
   font-family: "Arial", sans-serif;
   font-size: 14px;
   line-height: 18px;
