--- a/source/sass/blocks/intro.scss
+++ b/source/sass/blocks/intro.scss
@@ -37,53 +37,51 @@
 }
 
 .intro__title {
+  padding: 27px 0 20px;
   font-size: 36px;
   line-height: 36px;
-  color: $white;
   font-weight: 400;
-  margin: 0 auto 25px;
-  padding-top: 25px;
-  text-transform: none;
 
   @media (min-width: $tablet-width) {
     padding: 35px 0;
     font-size: 60px;
+    line-height: 60px;
     color: $black;
   }
 
   @media (min-width:$desktop-width) {
-    line-height: 60px;
-    margin-left: 100px;
-    width: 414px;
+    margin-top: 34px;
+    padding-top: 50px;
   }
 }
 
 .intro__lead {
-  margin: 0;
-  line-height: 18px;
-  color: $white;
-  padding-bottom: 26px;
+  margin-top: 5px;
+  margin-bottom: 28px;
+  font-size: 14px;
   text-transform: uppercase;
 
   @media (min-width: $tablet-width) {
     font-size: 20px;
     line-height: 22px;
     padding-bottom: 15px;
-    color: $black;
   }
 
   @media (min-width:$desktop-width) {
-    margin-left: 100px;
+    padding-bottom: 25px;
   }
 }
 
 .intro__link {
+  order: 1;
   font-size: 14px;
 
-  @media (min-width: $desktop-width) {
+  @media (min-width: $tablet-width) {
     font-size: 20px;
     line-height: 20px;
-    margin-top: 140px;
+    padding: 16px 27px;
+    z-index: 2;
     margin-left: 100px;
+    margin-bottom: 3px;
   }
 }
