--- a/source/sass/blocks/page-footer.scss
+++ b/source/sass/blocks/page-footer.scss
@@ -30,12 +30,13 @@
 }
 
 .page-footer__logo {
-  margin: 0;
-  height: 24px;
-  text-align: center;
-  padding-top: 39px;
-  padding-bottom: 32px;
-  border-bottom: 1px solid $border-grey;
+  position: relative;
+  display: flex;
+  align-items: center;
+  padding-top: 29px;
+  padding-bottom: 20px;
+  height: 45px;
+  box-sizing: content-box;
 
   &:hover {
     opacity: 0.8;
@@ -49,17 +50,24 @@
     padding: 0;
     margin-right: 30px;
     border-bottom: none;
-    }
+  }
+}
+
+.page-footer__logo-link {
+  margin: auto;
+
+  @media (min-width: $tablet-width) {
+    width: 128px;
   }
 
-.page-footer__social {
-  border-bottom: 1px solid $border-grey;
+  @media (min-width: $desktop-width) {
+    height: 22px;
+  }
 }
 
 .page-footer__copyright {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  min-height: 78px;
 }
 
 .page-footer__contacts {
