--- a/source/sass/blocks/toggle.scss
+++ b/source/sass/blocks/toggle.scss
@@ -16,11 +16,11 @@
     background-repeat: no-repeat;
   }
 
-  @media (min-width: $tablet-width) {
-    display: none;
-  }
+  // @media (min-width: $tablet-width) {
+  //   display: none;
+  // }
 
-  @media (min-width: $desktop-width) {
-    display: none;
-  }
+  // @media (min-width: $desktop-width) {
+  //   display: none;
+  // }
 }
