--- a/source/sass/blocks/form-section.scss
+++ b/source/sass/blocks/form-section.scss
@@ -21,6 +21,7 @@
     margin: 0 -20px;
     padding: 9px 20px;
     outline: 1px solid $special-grey;
+    flex: 1 0 100%;
 
     @media (min-width: $tablet-width) {
       margin: 25px -30px 77px 40px;
@@ -36,6 +37,7 @@
 
 .form-section__title {
   position: relative;
+  margin: 30px 0 33px;
   font-size: 24px;
   line-height: 26px;
   font-weight: 400;
@@ -68,16 +70,12 @@
 
   @media (min-width: $desktop-width) {
     margin: 46px 0 60px;
-    padding: 0 calc((100vw - 1360px) / 2);
+    padding: 0 calc((100vw - 1300px) / 2);
 
     &--extra {
       margin: 48px 0 40px;
     }
   }
-}
-
-.form-section--contacts {
-  padding-top: 26px;
 }
 
 .form-section--contacts .form-section__title {
@@ -146,7 +144,7 @@
   margin: 0;
   font-size: 16px;
   line-height: 20px;
-  font-weight: 300;
+  font-weight: 400;
   text-transform: uppercase;
   color: $special-dark-grey;
 
