--- a/source/sass/global/global.scss
+++ b/source/sass/global/global.scss
@@ -47,12 +47,12 @@ li {
 
   @media (min-width:$tablet-width) {
     padding: 0 30px;
-    min-width: 768px;
+    width: 768px;
   }
 
   @media (min-width:$desktop-width) {
     padding: 0 40px;
-    min-width: 1440px;
+    width: 1440px;
   }
 }
 
